# minivend

./: ChangeLog  Changes  Copying  INSTALL  LOW_MEMORY  MANIFEST  Makefile.PL  README  README-win.txt  README.OS  UPGRADE  WHATSNEW  bug1.pl  configure  configure.bat  configure.htm  configure.pl  makedocs  manifest  minivend.cfg  minivend.pl  relocate.pl  report  sample.cat  sample.cfg  setup  simple.cat  simple.cfg  svend.c  test.pl  vend.conf  vend.pl
File/: CounterFile.pm
Vend/: Application.pm  Attribute.pm  Builtin.pm  Cache.pm  Cart.pm  Catalog.pm  Cgi.pm  Config.pm  ConfigReader.pm  Data.pm  Directive.pm  Dispatch.pm  Ephemeral.pm  Escape.pm  Expire_file.pm  Form.pm  Full_search.pm  Glimpse.pm  Http.pm  Imagemap.pm  Interpolate.pm  Log.pm  Offline.pm  Option.pm  Option_1.pm  Order.pm  Orders.pm  Page.pm  PageBuild.pm  PageSyntax.pm  Page_compiled.pm  Page_simple.pm  Require.pm  Scan.pm  Search.pm  Sendmail.pm  Server.cf  Server.pm  Server.pm.orig  Server.pm.tcp  (+17 more)
demo/: demo.conf  minivend.asc  pricing.asc  product.txt  products  products.sample  report
doc/: Tagref.pm  intro.html  maxivend.html  minivend.html  minivend.pod  nav.html  svend.html  tags.html  toc.html  vend.html  vend.text
eg/: check  te
etc/: minivend.def  mvconf.cfg  mvconf.cmt  variables.def
extensions/: Interchange.pm
extra/: IniConf.pm
lib/: Carp.pm  IniConf.pm  faq.html
perl/: Interchange.pm
pod/: mvdocs.pod  mvfaq.pod
products/: products.asc  (+3 more)
src/: MD5-1.6.tar  config.h.in  configure  configure.in  mat.c  submitter  svend.c  testcgi  tlink.c  tlink.pl  vlink.c  vlink.pl
(+408 files in other folders)
