dnl Process this file with autoconf to produce a configure script.
AC_INIT(vlink.c)
AC_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC

dnl Checks for libraries.
AC_CHECK_LIB(socket, socket)
AC_CHECK_LIB(nsl, gethostbyname)

dnl Checks for header files.
dnl AC_HEADER_STDC
dnl AC_CHECK_HEADERS(fcntl.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_MSG_CHECKING(for environ declaration in unistd.h)
AC_CACHE_VAL(vend_cv_decl_environ,
   [AC_TRY_COMPILE([#include <unistd.h>],
                   [char** e = environ; ],
                   vend_cv_decl_environ=yes,
                   vend_cv_decl_environ=no)])
AC_MSG_RESULT($vend_cv_decl_environ)
if test $vend_cv_decl_environ = yes; then
   AC_DEFINE(ENVIRON_DECLARED)
fi

dnl Checks for library functions.
AC_TYPE_SIGNAL
dnl AC_CHECK_FUNCS(select socket strerror)
AC_CHECK_FUNCS(select socket strerror)

dnl Checks for system services
dnl AC_SYS_RESTARTABLE_SYSCALLS

AC_OUTPUT(syscfg)
